environments/prod/apps/app/services/taxi/base/config/200-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app.kubernetes.io/name: taxi
    app.kubernetes.io/part-of: app
  name: taxi
  namespace: prod
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app.kubernetes.io/name: taxi
    app.kubernetes.io/part-of: app
status:
  loadBalancer: {}
